@@ -13,7 +13,8 @@
 Changes after 2.3.3 release (postfixadmin-2.3 branch)
 ---------------------------------------------------------------
 
-  - fix typo in variable name in squirrelmail plugin
+  - generate more secure random passwords
+  - squirrelmail plugin: fix typo in variable name
 
 Version 2.3.3 - 2011/03/14 - SVN r1010 (postfixadmin-2.3 branch)
 ---------------------------------------------------------------
